--- a/Accueil.css
+++ b/Accueil.css
@@ -73,9 +73,11 @@ h2{
 
 .ImgPortfolio{
     width: 800px;
+
 }
 
-.Apropos{
+
+footer{
     padding: 5rem;
     margin: auto;
     max-width: 1200px;
@@ -83,6 +85,20 @@ h2{
     justify-content: center;
     align-items: center;
     height: 20vh;
+    display: flex;
+}
+ul{
+display:flex ;
+justify-content: center;
+align-items: center;
+}
+
+a{
+list-style-type: none;
+padding: 3rem;
+text-decoration: none;
+font-size: 3rem;
+color: white;
 }
 
 .TextApropos{
@@ -91,8 +107,68 @@ h2{
     
 }
 
-@media (max-width: 1024px){
-    .Apropos{
-        min-width: 500px ;
+ @media ( max-width: 1350px){
+     
+    .ContenuHeader{
+        
+        width: 1000px;
+        
     }
+    
+    h1{
+        font-size: 4rem;
+        left: 50%;
+
+     }
+     h2{
+        font-size: 4rem;
+        left: 50%;
+     }
+
+     .CV{
+         width : 1000px;
+         height: 100vh;
+     }
+     .ImgPortfolio{
+        width: 600px;
+     }
+ }
+
+
+
+
+
+@media (max-width: 1024px){
+    
+
+    .ContenuHeader{
+        
+        width: 700px;
+    
+    }
+    
+    h1{
+        font-size: 4rem;
+        left: 30%;
+
+     }
+     h2{
+        font-size: 4rem;
+        left: 30%;
+     }
+
+     .CV{
+         width : 700px;
+         height: 100vh;
+     }
+     .ImgPortfolio{
+        width: 500px;
+     }
+     a{
+        padding: 1rem;
+        font-size: 2rem;
+        color: white;
+        }
+
+
 }
